--- a/FoodPiper/ViewRestaurantsView.xib
+++ b/FoodPiper/ViewRestaurantsView.xib
@@ -7,33 +7,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DEViewRestaurantsViewController"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="1" customClass="DEViewRestaurantsView">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="281"/>
+            <rect key="frame" x="0.0" y="0.0" width="140" height="268"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie at the park" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" preferredMaxLayoutWidth="129" translatesAutoresizingMaskIntoConstraints="NO" id="Rdq-Pp-4T2">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie at the park" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rdq-Pp-4T2">
                     <rect key="frame" x="6" y="0.0" width="103" height="23"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="103" id="H6G-Y5-1r9"/>
                         <constraint firstAttribute="height" constant="23" id="VCA-oA-9dB"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="106" translatesAutoresizingMaskIntoConstraints="NO" id="dfb-u1-i4Q">
-                    <rect key="frame" x="29" y="207" width="106" height="39"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="39" id="7eb-Zm-fJq"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="12"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.2 mi" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ali-rf-U8v">
-                    <rect key="frame" x="30" y="249" width="45" height="24"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.2 mi" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="45" translatesAutoresizingMaskIntoConstraints="NO" id="Ali-rf-U8v">
+                    <rect key="frame" x="31" y="221" width="45" height="24"/>
+                    <color key="backgroundColor" red="0.12549019610000001" green="0.53725490200000003" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="e2N-76-rGr"/>
-                        <constraint firstAttribute="width" constant="45" id="skn-Df-mp6"/>
+                        <constraint firstAttribute="width" constant="45" id="kFD-ar-0Ch"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="12"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -41,12 +32,13 @@
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MJ0-LB-RQz">
                     <rect key="frame" x="0.0" y="22" width="140" height="140"/>
+                    <color key="backgroundColor" red="0.96078431369999995" green="0.64313725489999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="140" id="SPl-mj-GoB"/>
                     </constraints>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B1c-VQ-fcl" customClass="DEViewDistance">
-                    <rect key="frame" x="5" y="253" width="23" height="15"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B1c-VQ-fcl">
+                    <rect key="frame" x="7" y="225" width="23" height="15"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -54,8 +46,8 @@
                         <constraint firstAttribute="width" constant="23" id="At6-x4-0bh"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5I-6n-mVu" customClass="DEViewLocation">
-                    <rect key="frame" x="4" y="214" width="25" height="25"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5I-6n-mVu">
+                    <rect key="frame" x="6" y="190" width="25" height="25"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -63,15 +55,6 @@
                         <constraint firstAttribute="height" constant="25" id="wzX-gW-6Nq"/>
                     </constraints>
                 </view>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie at the park" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="40" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" preferredMaxLayoutWidth="129" translatesAutoresizingMaskIntoConstraints="NO" id="kW7-t4-DET">
-                    <rect key="frame" x="6" y="168" width="129" height="36"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="36" id="30D-4E-gNA"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="13"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ccH-so-CjV">
                     <rect key="frame" x="110" y="-1" width="29" height="24"/>
                     <constraints>
@@ -82,29 +65,49 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Movie at the park" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" preferredMaxLayoutWidth="129" translatesAutoresizingMaskIntoConstraints="NO" id="kW7-t4-DET">
+                    <rect key="frame" x="6" y="168" width="129" height="18"/>
+                    <color key="backgroundColor" red="0.15686274510000001" green="0.54901960780000003" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" priority="500" constant="36" id="30D-4E-gNA"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="13"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="104" translatesAutoresizingMaskIntoConstraints="NO" id="dfb-u1-i4Q">
+                    <rect key="frame" x="31" y="189" width="104" height="27"/>
+                    <color key="backgroundColor" red="0.96078431369999995" green="0.64313725489999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="27" id="7eb-Zm-fJq"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="12"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="kW7-t4-DET" firstAttribute="top" secondItem="MJ0-LB-RQz" secondAttribute="bottom" constant="6" id="73h-uI-frd"/>
-                <constraint firstItem="B1c-VQ-fcl" firstAttribute="top" secondItem="dfb-u1-i4Q" secondAttribute="bottom" constant="7" id="98F-dg-hYR"/>
+                <constraint firstItem="B1c-VQ-fcl" firstAttribute="top" secondItem="dfb-u1-i4Q" secondAttribute="bottom" constant="9" id="98F-dg-hYR"/>
                 <constraint firstAttribute="trailing" secondItem="MJ0-LB-RQz" secondAttribute="trailing" id="9xA-Je-nJW"/>
-                <constraint firstItem="L5I-6n-mVu" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="4" id="BeU-FW-WFU"/>
                 <constraint firstItem="dfb-u1-i4Q" firstAttribute="leading" secondItem="L5I-6n-mVu" secondAttribute="trailing" id="EDr-7c-L9s"/>
-                <constraint firstItem="kW7-t4-DET" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="6" id="LTL-LV-kMw"/>
                 <constraint firstItem="MJ0-LB-RQz" firstAttribute="top" secondItem="Rdq-Pp-4T2" secondAttribute="bottom" constant="-1" id="LaM-g6-Aah"/>
                 <constraint firstItem="dfb-u1-i4Q" firstAttribute="top" secondItem="kW7-t4-DET" secondAttribute="bottom" constant="3" id="Nao-Bq-HTA"/>
-                <constraint firstItem="Ali-rf-U8v" firstAttribute="leading" secondItem="B1c-VQ-fcl" secondAttribute="trailing" constant="2" id="ODV-wy-zxc"/>
                 <constraint firstItem="dfb-u1-i4Q" firstAttribute="centerY" secondItem="L5I-6n-mVu" secondAttribute="centerY" id="PcX-5S-THw"/>
-                <constraint firstAttribute="trailing" secondItem="dfb-u1-i4Q" secondAttribute="trailing" constant="5" id="bpv-Nu-Toj"/>
+                <constraint firstItem="L5I-6n-mVu" firstAttribute="leading" secondItem="kW7-t4-DET" secondAttribute="leading" id="Suo-uX-dkK"/>
+                <constraint firstItem="Ali-rf-U8v" firstAttribute="leading" secondItem="dfb-u1-i4Q" secondAttribute="leading" id="ctj-nj-nXq"/>
                 <constraint firstItem="ccH-so-CjV" firstAttribute="leading" secondItem="Rdq-Pp-4T2" secondAttribute="trailing" constant="1" id="g3j-bI-zce"/>
                 <constraint firstItem="B1c-VQ-fcl" firstAttribute="centerX" secondItem="L5I-6n-mVu" secondAttribute="centerX" id="iCD-nB-6HM"/>
                 <constraint firstItem="Ali-rf-U8v" firstAttribute="centerY" secondItem="B1c-VQ-fcl" secondAttribute="centerY" constant="0.5" id="kff-lq-T8Y"/>
                 <constraint firstAttribute="trailing" secondItem="ccH-so-CjV" secondAttribute="trailing" constant="1" id="l8q-B2-zA3"/>
+                <constraint firstAttribute="trailing" secondItem="kW7-t4-DET" secondAttribute="trailing" constant="5" id="ncV-Mu-j54"/>
                 <constraint firstItem="Rdq-Pp-4T2" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="6" id="olk-eP-Z9B"/>
-                <constraint firstAttribute="trailing" secondItem="kW7-t4-DET" secondAttribute="trailing" constant="5" id="rNO-jX-mbX"/>
                 <constraint firstItem="ccH-so-CjV" firstAttribute="centerY" secondItem="Rdq-Pp-4T2" secondAttribute="centerY" id="s7Y-BC-jPv"/>
                 <constraint firstItem="MJ0-LB-RQz" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="uBJ-qB-x4W"/>
+                <constraint firstItem="kW7-t4-DET" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="6" id="wXu-9B-610"/>
                 <constraint firstItem="Rdq-Pp-4T2" firstAttribute="top" secondItem="1" secondAttribute="top" id="ybC-aQ-MmD"/>
+                <constraint firstItem="dfb-u1-i4Q" firstAttribute="trailing" secondItem="kW7-t4-DET" secondAttribute="trailing" id="zwp-mt-NRr"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -116,9 +119,9 @@
                 <outlet property="lblSubtitle" destination="kW7-t4-DET" id="XHW-lK-SBe"/>
                 <outlet property="lblTitle" destination="Rdq-Pp-4T2" id="lYf-Hm-poA"/>
             </connections>
-            <point key="canvasLocation" x="-158" y="100.5"/>
+            <point key="canvasLocation" x="-158" y="94"/>
         </view>
-        <view contentMode="scaleToFill" id="jXJ-tE-48P" customClass="DEEventsTimeline">
+        <view contentMode="scaleToFill" id="jXJ-tE-48P">
             <rect key="frame" x="0.0" y="0.0" width="140" height="24"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
