Displaying the hours view but not with the hours in it yet

--- a/FoodPiper/ViewIndividualRestaurant.xib
+++ b/FoodPiper/ViewIndividualRestaurant.xib
@@ -21,7 +21,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="msj-cA-h8F">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="msj-cA-h8F">
                             <rect key="frame" x="87" y="77" width="46" height="46"/>
                             <color key="backgroundColor" red="0.12549019610000001" green="0.53725490200000003" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -80,7 +80,7 @@
                                 <constraint firstAttribute="height" constant="70" id="b0Y-ie-pr0"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <state key="normal" title="Menu">
+                            <state key="normal" title="Website">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <variation key="default">
@@ -97,6 +97,9 @@
                                     <include reference="b0Y-ie-pr0"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="viewRestaurantWebsite:" destination="-1" eventType="touchUpInside" id="v6B-p3-hAc"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WR9-fd-u9u">
                             <rect key="frame" x="87" y="77" width="46" height="46"/>
@@ -118,6 +121,9 @@
                                     <include reference="lAc-Bz-6Hr"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="viewHours:" destination="-1" eventType="touchUpInside" id="7wu-Aj-K7o"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rmK-P0-vtG">
                             <rect key="frame" x="87" y="77" width="46" height="46"/>
@@ -455,52 +461,52 @@
                             <exclude reference="19g-5I-9rf"/>
                             <exclude reference="XYa-Ms-oxP"/>
                             <exclude reference="gqc-Vi-8gh"/>
+                            <exclude reference="dMe-bR-P36"/>
+                            <exclude reference="zKS-Z4-C7Z"/>
+                            <exclude reference="Udd-5t-T6k"/>
+                            <exclude reference="dv9-bR-v7w"/>
+                            <exclude reference="fOw-QK-v3F"/>
+                            <exclude reference="hSU-ET-Uva"/>
+                            <exclude reference="g6z-aU-OKQ"/>
+                            <exclude reference="nre-vL-7Ec"/>
+                            <exclude reference="rI3-X2-eyJ"/>
+                            <exclude reference="3rr-8v-4Oy"/>
+                            <exclude reference="V2h-E7-j8k"/>
+                            <exclude reference="mR6-KY-FzL"/>
                             <exclude reference="R7J-py-nSm"/>
                             <exclude reference="VsO-98-cgd"/>
                             <exclude reference="8jZ-XP-DrM"/>
                             <exclude reference="LgR-o7-zr9"/>
                             <exclude reference="XnB-Xd-xMX"/>
+                            <exclude reference="0nv-aY-ghD"/>
+                            <exclude reference="n5E-bH-0t1"/>
+                            <exclude reference="tpL-ln-owP"/>
                             <exclude reference="6Og-uv-5e5"/>
                             <exclude reference="88D-bh-pLo"/>
                             <exclude reference="MWI-Zw-HQb"/>
                             <exclude reference="Usg-6G-pdg"/>
                             <exclude reference="bM1-T3-idp"/>
-                            <exclude reference="0zM-hw-N3h"/>
-                            <exclude reference="2AD-NV-gAE"/>
-                            <exclude reference="TDB-u3-guq"/>
-                            <exclude reference="9X1-vg-Zu2"/>
-                            <exclude reference="YvN-dw-8dn"/>
-                            <exclude reference="ibt-W3-iTm"/>
                             <exclude reference="er3-3x-re9"/>
                             <exclude reference="hjD-C4-jwW"/>
                             <exclude reference="wxp-SL-EpU"/>
+                            <exclude reference="JRR-3K-9Xi"/>
+                            <exclude reference="LzU-sd-d7c"/>
+                            <exclude reference="dmi-wt-nbO"/>
+                            <exclude reference="9X1-vg-Zu2"/>
+                            <exclude reference="YvN-dw-8dn"/>
+                            <exclude reference="ibt-W3-iTm"/>
+                            <exclude reference="JtW-JZ-LE2"/>
+                            <exclude reference="boe-NO-b5x"/>
+                            <exclude reference="uQO-oq-IjU"/>
                             <exclude reference="2xV-qC-ggf"/>
                             <exclude reference="Jca-yH-DC5"/>
                             <exclude reference="f68-R9-yXS"/>
                             <exclude reference="ykZ-EX-8Xz"/>
-                            <exclude reference="JtW-JZ-LE2"/>
-                            <exclude reference="boe-NO-b5x"/>
-                            <exclude reference="uQO-oq-IjU"/>
                             <exclude reference="GEh-YM-h5i"/>
                             <exclude reference="eY6-LV-kAt"/>
-                            <exclude reference="0nv-aY-ghD"/>
-                            <exclude reference="n5E-bH-0t1"/>
-                            <exclude reference="tpL-ln-owP"/>
-                            <exclude reference="JRR-3K-9Xi"/>
-                            <exclude reference="LzU-sd-d7c"/>
-                            <exclude reference="dmi-wt-nbO"/>
-                            <exclude reference="g6z-aU-OKQ"/>
-                            <exclude reference="nre-vL-7Ec"/>
-                            <exclude reference="rI3-X2-eyJ"/>
-                            <exclude reference="Udd-5t-T6k"/>
-                            <exclude reference="dv9-bR-v7w"/>
-                            <exclude reference="dMe-bR-P36"/>
-                            <exclude reference="zKS-Z4-C7Z"/>
-                            <exclude reference="fOw-QK-v3F"/>
-                            <exclude reference="hSU-ET-Uva"/>
-                            <exclude reference="3rr-8v-4Oy"/>
-                            <exclude reference="V2h-E7-j8k"/>
-                            <exclude reference="mR6-KY-FzL"/>
+                            <exclude reference="0zM-hw-N3h"/>
+                            <exclude reference="2AD-NV-gAE"/>
+                            <exclude reference="TDB-u3-guq"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
@@ -527,52 +533,52 @@
                             <include reference="19g-5I-9rf"/>
                             <exclude reference="XYa-Ms-oxP"/>
                             <exclude reference="gqc-Vi-8gh"/>
+                            <include reference="dMe-bR-P36"/>
+                            <include reference="zKS-Z4-C7Z"/>
+                            <include reference="Udd-5t-T6k"/>
+                            <include reference="dv9-bR-v7w"/>
+                            <include reference="fOw-QK-v3F"/>
+                            <include reference="hSU-ET-Uva"/>
+                            <exclude reference="g6z-aU-OKQ"/>
+                            <include reference="nre-vL-7Ec"/>
+                            <include reference="rI3-X2-eyJ"/>
+                            <include reference="3rr-8v-4Oy"/>
+                            <include reference="V2h-E7-j8k"/>
+                            <include reference="mR6-KY-FzL"/>
                             <include reference="R7J-py-nSm"/>
                             <include reference="VsO-98-cgd"/>
                             <include reference="8jZ-XP-DrM"/>
                             <include reference="LgR-o7-zr9"/>
                             <include reference="XnB-Xd-xMX"/>
+                            <include reference="0nv-aY-ghD"/>
+                            <include reference="n5E-bH-0t1"/>
+                            <include reference="tpL-ln-owP"/>
                             <include reference="6Og-uv-5e5"/>
                             <include reference="88D-bh-pLo"/>
                             <include reference="MWI-Zw-HQb"/>
                             <include reference="Usg-6G-pdg"/>
                             <include reference="bM1-T3-idp"/>
-                            <include reference="0zM-hw-N3h"/>
-                            <include reference="2AD-NV-gAE"/>
-                            <include reference="TDB-u3-guq"/>
-                            <include reference="9X1-vg-Zu2"/>
-                            <include reference="YvN-dw-8dn"/>
-                            <include reference="ibt-W3-iTm"/>
                             <include reference="er3-3x-re9"/>
                             <include reference="hjD-C4-jwW"/>
                             <include reference="wxp-SL-EpU"/>
+                            <include reference="JRR-3K-9Xi"/>
+                            <include reference="LzU-sd-d7c"/>
+                            <include reference="dmi-wt-nbO"/>
+                            <include reference="9X1-vg-Zu2"/>
+                            <include reference="YvN-dw-8dn"/>
+                            <include reference="ibt-W3-iTm"/>
+                            <include reference="JtW-JZ-LE2"/>
+                            <include reference="boe-NO-b5x"/>
+                            <include reference="uQO-oq-IjU"/>
                             <include reference="2xV-qC-ggf"/>
                             <include reference="Jca-yH-DC5"/>
                             <include reference="f68-R9-yXS"/>
                             <include reference="ykZ-EX-8Xz"/>
-                            <include reference="JtW-JZ-LE2"/>
-                            <include reference="boe-NO-b5x"/>
-                            <include reference="uQO-oq-IjU"/>
                             <include reference="GEh-YM-h5i"/>
                             <include reference="eY6-LV-kAt"/>
-                            <include reference="0nv-aY-ghD"/>
-                            <include reference="n5E-bH-0t1"/>
-                            <include reference="tpL-ln-owP"/>
-                            <include reference="JRR-3K-9Xi"/>
-                            <include reference="LzU-sd-d7c"/>
-                            <include reference="dmi-wt-nbO"/>
-                            <exclude reference="g6z-aU-OKQ"/>
-                            <include reference="nre-vL-7Ec"/>
-                            <include reference="rI3-X2-eyJ"/>
-                            <include reference="Udd-5t-T6k"/>
-                            <include reference="dv9-bR-v7w"/>
-                            <include reference="dMe-bR-P36"/>
-                            <include reference="zKS-Z4-C7Z"/>
-                            <include reference="fOw-QK-v3F"/>
-                            <include reference="hSU-ET-Uva"/>
-                            <include reference="3rr-8v-4Oy"/>
-                            <include reference="V2h-E7-j8k"/>
-                            <include reference="mR6-KY-FzL"/>
+                            <include reference="0zM-hw-N3h"/>
+                            <include reference="2AD-NV-gAE"/>
+                            <include reference="TDB-u3-guq"/>
                         </mask>
                     </variation>
                 </view>
@@ -614,7 +620,7 @@
                 <outlet property="txtAddress" destination="OTs-1h-Ffv" id="22e-vZ-k7i"/>
                 <outlet property="txtCuisine" destination="ryd-pY-A6c" id="Cds-B7-MlK"/>
             </connections>
-            <point key="canvasLocation" x="-244" y="624.5"/>
+            <point key="canvasLocation" x="-84" y="1538.5"/>
         </scrollView>
     </objects>
 </document>
